DevOps-Challenge-Demo-Code-master/terraform-project/vpc.tf
# resource "google_compute_network" "vpc_network" {
#   name = "vpc-network"
# }
